package com.masanz.imperia.modelo;

/**
 * @author TODO PON AQUÍ TU NOMBRE
 */
public class MisionConquistarNTerritoriosDeCadaContinente {

}